[tool.poetry]
name = "learning-ml"
version = "0.1.0"
description = ""
authors = ["Aman Rawat <neogamers21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.3.0"
matplotlib = "^3.7.2"
numpy = "^1.25.2"
ipykernel = "^6.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
